2010-11-01  Chang Shu  <chang.shu@nokia.com>

Reviewed by Antonio Gomes.

        Leave SelectElement key handling without setting event default
        handled when the selection reaches the boundary so focus can
        move to neighbor nodes in spatial navigation.
        https://bugs.webkit.org/show_bug.cgi?id=48145

        * fast/events/spatial-navigation/snav-multiple-select-expected.txt:
        * fast/events/spatial-navigation/snav-multiple-select.html:
2010-11-01  Chang Shu  <chang.shu@nokia.com>

        Reviewed by Antonio Gomes.

        Leave SelectElement key handling without setting event default
        handled when the selection reaches the boundary so focus can
        move to neighbor nodes in spatial navigation.
        https://bugs.webkit.org/show_bug.cgi?id=48145

        * dom/SelectElement.cpp:
        (WebCore::SelectElement::listBoxDefaultEventHandler):

Canonical link: https://commits.webkit.org/61590@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71094 268f45cc-cd09-0410-ab3c-d52691b4dbfc